# Robotics-ROS

assignment_1/: paper_summary.txt
assignment_1/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml
assignment_1/beginner_tutorials/src/: talker.cpp
assignment_2/turtle_initials/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
assignment_2/turtle_initials/launch/: start_turtle_initials.launch~
assignment_2/turtle_initials/src/: turtle_initials_node.cpp
assignment_3/: tts.pgm.pgm  tts.pgm.yaml
assignment_3/turtlebot_auto_slam/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
assignment_3/turtlebot_auto_slam/launch/: start_tas.launch  start_tas.launch~
assignment_3/turtlebot_auto_slam/rviz/: tas.rviz
assignment_3/turtlebot_auto_slam/src/: turtlebot_auto_slam_node.cpp
assignment_3/turtlebot_auto_slam/worlds/: tas.world
lab_2/hearing_aid/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
lab_2/hearing_aid/launch/: start_hearing_aid.launch
lab_2/hearing_aid/src/: hearing_aid_node.cpp  power_node.cpp
lab_2/my_listener/: CMakeLists.txt  package.xml
lab_2/my_listener/src/: my_listener_node.cpp
lab_2/my_talker/: CMakeLists.txt  package.xml
lab_3/: tts.pgm  tts.yaml
lab_3/turtlebot_teleop_slam/: CMakeLists.txt  package.xml
lab_3/turtlebot_teleop_slam/rviz/: tts.rviz
